@@ -1,6 +1,11 @@
 v3.7.7 (XXXX-XX-XX)
 -------------------
 
+* Fixed some wrong behaviour in single document updates. If the option
+  ignoreRevs=false was given and the precondition _rev was given in the body but
+  the _key was given in the URL path, then the rev was wrongly taken as 0,
+  rather than using the one from the document body.
+
 * Allow {USER} paceholder string also in `--ldap.search-filter`.
 
 * Make `padded` and `autoincrement` key generators export their `lastValue`
